@@ -2,7 +2,7 @@ name = ASU Local iSearch Directory
 description = Pulls iSearch data and stores/updates it locally. Sets up a default listing view and profile pages.
 core = 7.x
 package = ASU
-version = 7.x-1.8.4
+version = 7.x-1.8.5
 project = asu_isearch
 dependencies[] = asu_dept_picker
 dependencies[] = ctools
