@@ -35,9 +35,10 @@ define('ASU_ISEARCH_DIRECTORY_FEED_CACHE_ENDPOINT', 'private://isearch/feeds/');
 define('ASU_ISEARCH_MASTER_FILE_ENDPOINT', 'private://isearch/feeds/asu_isearch_master.json');
 define('ASU_ISEARCH_DEPARTMENT_IMPORT_TRACKER', variable_get('asu_isearch_dept_tracker', NULL));
 define('ASU_ISEARCH_MASTER_SOURCE_LIMIT', 250);
-define('ASU_ISEARCH_PROFILE_CLEANUP_LIMIT', 30);
+define('ASU_ISEARCH_PROFILE_CLEANUP_LIMIT', 100);
 define('ASU_ISEARCH_PROFILE_ONLOAD_UPDATE_INTERVAL', 6); // interval between profile load updates, in hours
-define('ASU_ISEARCH_DEPT_CACHING_LIMIT', 10);
+define('ASU_ISEARCH_DEPT_CACHING_LIMIT', 25);
+define('ASU_ISEARCH_MANUAL_IMPORT_DEPT_CACHE_LIMIT', 5);
 
 // Feed URLs
 $asu_isearch_devmode = variable_get('asu_isearch_devmode', FALSE);
@@ -160,6 +161,22 @@ function asu_isearch_node_view($node, $view_mode, $langcode) {
     $profile_tabs_weight = $node->content['field_isearch_profile_tabs']['#weight'];
     $node->content['field_isearch_profile_tabs'] = asu_isearch_prepare_quicktabs($node);
     $node->content['field_isearch_profile_tabs']['#weight'] = $profile_tabs_weight;
+
+    // check Solr health before operating with Solr data
+    if (asu_dir_utilities_solr_health_check()) {
+
+      $asurite = $node->field_isearch_asurite_id['und'][0]['value'];
+      $solr_profile = asu_dir_utilities_get_solr_person($asurite);
+
+      // Ferpa login -- if profile not found in Solr, unpublish, set 'not found' message, and redirect
+      // to front page
+      if (empty($solr_profile)) {
+        $node->status = 0;
+        node_save($node);
+        drupal_set_message('Profile not found.');
+        drupal_goto('/');
+      }
+    }
   }
 }
 
@@ -237,7 +254,7 @@ function asu_isearch_ctools_plugin_directory($module, $plugin) {
 function asu_isearch_entity_info_alter(&$entity_info) {
 
   //todo:  disable panel pane
-  //if (variable_get('asu_isearch_overrride_panel', FALSE)) {
+  if (variable_get('asu_isearch_overrride_panel', FALSE)) {
     // Add panel pane for iSearch directory
     $entity_info['fieldable_panels_pane']['bundles']['isearch_directory'] = array(
       'label' => t('Add iSearch directory'),
@@ -252,7 +269,7 @@ function asu_isearch_entity_info_alter(&$entity_info) {
         'access arguments' => array('administer fieldable panels panes'),
       ),
     );
-  //}
+  }
 }
 
 function asu_isearch_get_default_photo() {
