@@ -267,6 +267,7 @@ div.krumo-preview {
 .isearch-directory-list .item-list .pager {
     margin: 20px 0;
 }
+
 /*
 .field-type-asu-directory .pagination .pager-current {
     background-color: #a90044;
