@@ -4,6 +4,6 @@
  */
 ?>
 <div
-  class="asu-isearch-directory-pane <?php print $classes; ?>"<?php print $attributes; ?>>
+        class="asu-isearch-directory-pane <?php print $classes; ?>"<?php print $attributes; ?>>
   <?php print render($content); ?>
 </div>
